cmake_minimum_required(VERSION 3.10)
project(Tests)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(CMAKE_BUILD_TYPE Debug)

add_subdirectory($ENV{GTEST_BASE_PATH} $ENV{GTEST_BASE_PATH}/build)
include_directories($ENV{GTEST_BASE_PATH}/googletest/include)
link_libraries(gtest)

add_subdirectory(Two_Sum ../Two_Sum/build)
add_subdirectory(Best_Stock ../Best_Stock/build)
add_subdirectory(Contains_Duplicate ../Contains_Duplicate/build)
add_subdirectory(Reverse_Linked_List ../Reverse_Linked_List/build)
add_subdirectory(Product_Of_Array_Except_Self ../Product_Of_Array_Except_Self/build)
add_subdirectory(Maximum_Subarray ../Maximum_Subarray/build)
add_subdirectory(Maximum_Product_Subarray ../Maximum_Product_Subarray/build)
add_subdirectory(Minimum_Rotated_Sorted_Array ../Minimum_Rotated_Sorted_Array/build)
add_subdirectory(Search_Rotated_Sorted_Array ../Search_Rotated_Sorted_Array/build)
add_subdirectory(Three_Sum ../Three_Sum/build)
add_subdirectory(Container_With_Most_Water ../Container_With_Most_Water/build)
add_subdirectory(Sum_Of_Two_Integers ../Sum_Of_Two_Integers/build)
add_subdirectory(Number_Of_1_Bits ../Number_Of_1_Bits/build)
add_subdirectory(Counting_Bits ../Counting_Bits/build)
add_subdirectory(Missing_Number ../Missing_Number/build)
add_subdirectory(Reverse_Bits ../Reverse_Bits/build)
add_subdirectory(Binary_Tree_Maximum_Path_Sum ../Binary_Tree_Maximum_Path_Sum/build)