cmake_minimum_required(VERSION 3.10)
project(Tests)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
set(CMAKE_BUILD_TYPE Debug)

add_subdirectory($ENV{GTEST_BASE_PATH} $ENV{GTEST_BASE_PATH}/build)
include_directories($ENV{GTEST_BASE_PATH}/googletest/include)
link_libraries(gtest)

add_subdirectory(Leetcode_Datastructures ../Leetcode_Datastructures/build)

add_subdirectory(Two_Sum ../Two_Sum/build)
add_subdirectory(Best_Stock ../Best_Stock/build)
add_subdirectory(Contains_Duplicate ../Contains_Duplicate/build)
add_subdirectory(Reverse_Linked_List ../Reverse_Linked_List/build)
add_subdirectory(Product_Of_Array_Except_Self ../Product_Of_Array_Except_Self/build)
add_subdirectory(Maximum_Subarray ../Maximum_Subarray/build)
add_subdirectory(Maximum_Product_Subarray ../Maximum_Product_Subarray/build)
add_subdirectory(Minimum_Rotated_Sorted_Array ../Minimum_Rotated_Sorted_Array/build)
add_subdirectory(Search_Rotated_Sorted_Array ../Search_Rotated_Sorted_Array/build)
add_subdirectory(Three_Sum ../Three_Sum/build)
add_subdirectory(Container_With_Most_Water ../Container_With_Most_Water/build)
add_subdirectory(Sum_Of_Two_Integers ../Sum_Of_Two_Integers/build)
add_subdirectory(Number_Of_1_Bits ../Number_Of_1_Bits/build)
add_subdirectory(Counting_Bits ../Counting_Bits/build)
add_subdirectory(Missing_Number ../Missing_Number/build)
add_subdirectory(Reverse_Bits ../Reverse_Bits/build)
add_subdirectory(Binary_Tree_Maximum_Path_Sum ../Binary_Tree_Maximum_Path_Sum/build)
add_subdirectory(Serialize_And_Deserialize_Binary_Tree ../Serialize_And_Deserialize_Binary_Tree/build)
add_subdirectory(Same_Tree ../Same_Tree/build)
add_subdirectory(Longest_Substring_Between_Two_Equal_Characters ../Longest_Substring_Between_Two_Equal_Characters/build)
add_subdirectory(BT_From_Preorder_Inorder ../BT_From_Preorder_Inorder/build)
add_subdirectory(Validate_Binary_Tree ../Validate_Binary_Tree/build)
add_subdirectory(Kth_Smallest_Element_BST ../Kth_Smallest_Element_BST/build)
add_subdirectory(Implement_Trie ../Implement_Trie/build)
add_subdirectory(Add_And_Search_Words ../Add_And_Search_Words/build)
add_subdirectory(Word_Search ../Word_Search/build)
add_subdirectory(Word_Search_II ../Word_Search_II/build)
add_subdirectory(Longest_Substring_Without_Repeating_Characters ../Longest_Substring_Without_Repeating_Characters/build)
add_subdirectory(Longest_Repeating_Character_Replacement ../Longest_Repeating_Character_Replacement/build)
add_subdirectory(Minimum_Window_Substring ../Minimum_Window_Substring/build)
add_subdirectory(Valid_Anagram ../Valid_Anagram/build)
add_subdirectory(Group_Anagrams ../Group_Anagrams/build)
add_subdirectory(Valid_Parentheses ../Valid_Parentheses/build)
add_subdirectory(Valid_Palindrome ../Valid_Palindrome/build)
add_subdirectory(Merge_Two_Sorted_Lists ../Merge_Two_Sorted_Lists/build)
add_subdirectory(Longest_Palindromic_Substring ../Longest_Palindromic_Substring/build)
add_subdirectory(Word_Subsets ../Word_Subsets/build)
add_subdirectory(Clone_Graph ../Clone_Graph/build)
add_subdirectory(Unique_Paths ../Unique_Paths/build)
add_subdirectory(Kth_Smallest_Element_Sorted_Matrix ../Kth_Smallest_Element_Sorted_Matrix/build)
add_subdirectory(My_Calendar_I ../My_Calendar_I/build)
add_subdirectory(Mirror_Reflection ../Mirror_Reflection/build)
add_subdirectory(Combination_Sum_IV ../Combination_Sum_IV/build)
add_subdirectory(Count_Vowel_Permutation ../Count_Vowel_Permutation/build)
add_subdirectory(Longest_Increasing_Subsequence ../Longest_Increasing_Subsequence/build)
add_subdirectory(Binary_Trees_With_Factors ../Binary_Trees_With_Factors/build)
add_subdirectory(N_Queens ../N_Queens/build)
add_subdirectory(Course_Schedule ../Course_Schedule/build)
add_subdirectory(Pacific_Atlantic_Water_Flow ../Pacific_Atlantic_Water_Flow/build)
add_subdirectory(Number_Of_Islands ../Number_Of_Islands/build)
add_subdirectory(Substring_With_Concatenation_All_Words ../Substring_With_Concatenation_All_Words/build)
add_subdirectory(99_Bottles_Of_Beer ../99_Bottles_Of_Beer/build)
add_subdirectory(Word_Ladder ../Word_Ladder/build)